Fix diagonal hero z-index problem

--- a/src/scss/06_components/navigation/_header-bottom-navigation.scss
+++ b/src/scss/06_components/navigation/_header-bottom-navigation.scss
@@ -52,7 +52,7 @@ $-main-nav-dropdown-padding: $-main-nav-spacing;
     @include font('special.navigation.main_nav');
     list-style: none;
     position: relative;
-    z-index: 2;
+    z-index: 3;
   }
 
   // Menu toggle button
